--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-  background-color: #b9fffc;
+  background-color: #0093E9;
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
 }
 
 H3{
